--- a/docs/_includes/sidebar.njk
+++ b/docs/_includes/sidebar.njk
@@ -17,6 +17,7 @@
       <li><a href="/frameworks/react">React</a></li>
       <li><a href="/frameworks/vue">Vue</a></li>
       <li><a href="/frameworks/angular">Angular</a></li>
+      <li><a href="/frameworks/svelte">Svelte</a></li>
     </ul>
   </li>
   <li>
